<resources>
    <string name="app_name">AndroidTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Savics</string>
    <string name="nav_header_subtitle">Ikemefuna@savics.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Reset</string>

    <string name="menu_home">Home</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="settings">Settings</string>
    <string name="current_username">Current username</string>
    <string name="current_number_of_added_patients">current number of added patients</string>
    <string name="max_number_of_patients_allowed">Max number of patients allowed</string>
    <string name="save">SAVE</string>
    <string name="gender">Gender</string>
</resources>
